add pgxpool package
